@@ -1,5 +1,8 @@
 To do: focal for multi-layer objects
 
+--- development version
+new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in particular) to suppress writing band statistics (min, max, mean, sd). This is currently not documented. When TRUE, all statistics are written when all the values are in memory, but only min and max are written in other cases, leading to problems in QGIS (reported by Agustin Lobo)
+
 --- 1-September-2012, version 2.0-12
 fixed bug in summary reported by Agustin Lobo
 fixed bug in terrain/flowdir reported by Marie Morfin
